--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
   (mailto:)youremail@example.com
                             \/
                             =  -->
-  <form action="mailto:elhamaslami329@gmail.com" method="post" enctype="text/plain">
+  <form action="index.html" method="post" enctype="text/plain">
     <label for="">Your Name:</label>
     <input type="text" name="your Name" value=""><br>
     <label>Your Email:</label>
