--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="Elham's_Personal_site.jpg" alt="Elham Photo" width="150px"></td>
+      <td><img src="Elham Aslami.jpg" alt="Elham Photo" width="150px"></td>
       <td>
         <h1>Elham Aslami</h1>
         <p><em><strong>Graphic & Web Designer</strong>.</em></p>
